[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/ui_components/scripts/stats_display_ui.gd" type="Script" id=1]
[ext_resource path="res://ui/ui_components/sprite/window_border.png" type="Texture" id=2]
[ext_resource path="res://ui/main_ui/assets/Magic_icon.png" type="Texture" id=3]
[ext_resource path="res://ui/fonts/PrStart.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://ui/main_ui/assets/Strength_icon.png" type="Texture" id=5]
[ext_resource path="res://ui/main_ui/assets/Agility_icon.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 4 )

[node name="Stats" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 288.0
margin_bottom = 390.0
texture = ExtResource( 2 )
patch_margin_left = 13
patch_margin_top = 13
patch_margin_right = 13
patch_margin_bottom = 13
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
editor/display_folded = true
margin_left = 30.0
margin_top = 47.0
margin_right = 250.0
margin_bottom = 337.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_group_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 210.0
margin_bottom = 280.0
custom_constants/separation = 10

[node name="StatName" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
editor/display_folded = true
margin_right = 164.0
margin_bottom = 270.0

[node name="Magic" type="HBoxContainer" parent="MarginContainer/HBoxContainer/StatName"]
margin_right = 164.0
margin_bottom = 23.0
hint_tooltip = "Magic improves ability stats, increases total
 Mana, Mana recovery rate, and all forms of
 Magic Damage"
custom_constants/separation = 11

[node name="Icon" type="TextureRect" parent="MarginContainer/HBoxContainer/StatName/Magic"]
margin_right = 25.0
margin_bottom = 23.0
texture = ExtResource( 3 )

[node name="StatName" type="Label" parent="MarginContainer/HBoxContainer/StatName/Magic"]
margin_left = 36.0
margin_top = 3.0
margin_right = 116.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "Magic"

[node name="Strength" type="HBoxContainer" parent="MarginContainer/HBoxContainer/StatName"]
editor/display_folded = true
margin_top = 27.0
margin_right = 164.0
margin_bottom = 50.0
hint_tooltip = "Base: 5
Additional: 1
Multiplier: 0.2%"
custom_constants/separation = 11

[node name="Icon" type="TextureRect" parent="MarginContainer/HBoxContainer/StatName/Strength"]
margin_right = 25.0
margin_bottom = 23.0
rect_min_size = Vector2( 25, 23 )
texture = ExtResource( 5 )

[node name="StatName" type="Label" parent="MarginContainer/HBoxContainer/StatName/Strength"]
margin_left = 36.0
margin_top = 3.0
margin_right = 164.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "Strength"

[node name="Agility" type="HBoxContainer" parent="MarginContainer/HBoxContainer/StatName"]
editor/display_folded = true
margin_top = 54.0
margin_right = 164.0
margin_bottom = 77.0
hint_tooltip = "Base: 5
Additional: 1
Multiplier: 0.2%"
custom_constants/separation = 11

[node name="Icon" type="TextureRect" parent="MarginContainer/HBoxContainer/StatName/Agility"]
margin_right = 25.0
margin_bottom = 23.0
rect_min_size = Vector2( 25, 23 )
texture = ExtResource( 6 )

[node name="StatName" type="Label" parent="MarginContainer/HBoxContainer/StatName/Agility"]
margin_left = 36.0
margin_top = 3.0
margin_right = 148.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "Agility"

[node name="StatData" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 174.0
margin_right = 190.0
margin_bottom = 270.0

[node name="Magic_Stat" type="HBoxContainer" parent="MarginContainer/HBoxContainer/StatData"]
margin_right = 16.0
margin_bottom = 23.0
rect_min_size = Vector2( 0, 23 )

[node name="StatTotal" type="Label" parent="MarginContainer/HBoxContainer/StatData/Magic_Stat"]
margin_top = 3.0
margin_right = 16.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.992157, 1, 0, 1 )
text = "5"

[node name="Strength_Stat" type="HBoxContainer" parent="MarginContainer/HBoxContainer/StatData"]
margin_top = 27.0
margin_right = 16.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 23 )

[node name="StatTotal" type="Label" parent="MarginContainer/HBoxContainer/StatData/Strength_Stat"]
margin_top = 3.0
margin_right = 16.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.992157, 1, 0, 1 )
text = "5"

[node name="Agility_Stat" type="HBoxContainer" parent="MarginContainer/HBoxContainer/StatData"]
margin_top = 54.0
margin_right = 16.0
margin_bottom = 77.0
rect_min_size = Vector2( 0, 23 )

[node name="StatTotal" type="Label" parent="MarginContainer/HBoxContainer/StatData/Agility_Stat"]
margin_top = 3.0
margin_right = 16.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.992157, 1, 0, 1 )
text = "5"

[node name="Stats" type="Label" parent="."]
margin_left = 84.0
margin_top = 20.0
margin_right = 204.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "STATS"
